force-app/main/default/objects/Case/fields/Compensation_Approval__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Displays whether the compensation is approved</description>
    <label>Compensation Approval</label>
    <type>Checkbox</type>
</CustomField>