force-app/main/default/objects/Case/fields/Compensation_Approver__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Displays the user who has approved the case</description>
    <label>Compensation Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>