force-app/main/default/objects/Case/fields/Compensation_Count__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Count__c</fullName>
    <description>Counts the number of compensation on the case</description>
    <label>Compensation Count</label>
    <summaryForeignKey>Compensation__c.CaseId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>