force-app/main/default/objects/Case/fields/Compensation_List__c.field-meta.xml
<CustomField>
    <fullName>Compensation_List__c</fullName>
    <description>Displays all the compensations in the case in a list</description>
    <label>Compensation List</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>