force-app/main/default/objects/Case/fields/Compensation_Tool__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Tool__c</fullName>
    <description>Displays all the compensation tools that are included in the list</description>
    <label>Compensation Tool</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>