force-app/main/default/objects/Case/fields/Complaint_TXT_40__c.field-meta.xml
<CustomField>
    <fullName>Complaint_TXT_40__c</fullName>
    <description>Displays the concatenated format of equipment, part and condition</description>
    <label>Complaint TXT</label>
    <type>TextArea</type>
</CustomField>