force-app/main/default/objects/Case/fields/Condition_Multi__c.field-meta.xml
<CustomField>
    <fullName>Condition_Multi__c</fullName>
    <description>Displays all the available defect condition for equipments (maintenance case)</description>
    <label>Condition</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVATE / DEACTIVATE</fullName>
            </value>
            <value>
                <fullName>ADJUST</fullName>
            </value>
            <value>
                <fullName>BREAK</fullName>
            </value>
            <value>
                <fullName>BURST</fullName>
            </value>
            <value>
                <fullName>CLOG</fullName>
            </value>
            <value>
                <fullName>COMPLETE / INCOMPLETE</fullName>
            </value>
            <value>
                <fullName>CONNECT / DISCONNECT</fullName>
            </value>
            <value>
                <fullName>CONTROL / UNCONTROL</fullName>
            </value>
            <value>
                <fullName>CHANGE</fullName>
            </value>
            <value>
                <fullName>DENT</fullName>
            </value>
            <value>
                <fullName>DEVIATE</fullName>
            </value>
            <value>
                <fullName>DECLINE</fullName>
            </value>
            <value>
                <fullName>DISTORT</fullName>
            </value>
            <value>
                <fullName>ERASE</fullName>
            </value>
            <value>
                <fullName>FIT</fullName>
            </value>
            <value>
                <fullName>FIX</fullName>
            </value>
            <value>
                <fullName>HISSING (NOISE)</fullName>
            </value>
            <value>
                <fullName>ILLUMINATE</fullName>
            </value>
            <value>
                <fullName>INOPERATIVE (INOP)</fullName>
            </value>
            <value>
                <fullName>INSTALL</fullName>
            </value>
            <value>
                <fullName>JUMP</fullName>
            </value>
            <value>
                <fullName>LEAK</fullName>
            </value>
            <value>
                <fullName>LIFT</fullName>
            </value>
            <value>
                <fullName>LOOSE</fullName>
            </value>
            <value>
                <fullName>MALFUNCTION</fullName>
            </value>
            <value>
                <fullName>MISSING</fullName>
            </value>
            <value>
                <fullName>MOUNT</fullName>
            </value>
            <value>
                <fullName>OUT OF ORDER</fullName>
            </value>
            <value>
                <fullName>OVERFLOW</fullName>
            </value>
            <value>
                <fullName>PEEL OFF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>