force-app/main/default/objects/Case/fields/Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address__c</fullName>
    <description>mailing address to be a contact point</description>
    <label>Contact Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>