force-app/main/default/objects/Case/fields/Contact_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Contact_Country_Code__c</fullName>
    <description>Contry code for cotact address</description>
    <label>Contact Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>