force-app/main/default/objects/Case/fields/Contact_Email_txt__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_txt__c</fullName>
    <description>Contact Email is an email which need to be contact</description>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>