force-app/main/default/objects/Case/fields/Contact_Fax_txt__c.field-meta.xml
<CustomField>
    <fullName>Contact_Fax_txt__c</fullName>
    <description>Contact Fax is an fax number which need to be contact</description>
    <label>Contact Fax</label>
    <length>100</length>
    <type>Text</type>
</CustomField>