force-app/main/default/objects/Case/fields/Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mobile__c</fullName>
    <description>Contact Mobile is an mobile number which need to be contact</description>
    <label>Contact Mobile</label>
    <length>100</length>
    <type>Text</type>
</CustomField>