force-app/main/default/objects/Case/fields/Contact_Name_txt__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_txt__c</fullName>
    <description>Contact Name is a peron who be a contact point</description>
    <label>Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>