force-app/main/default/objects/Case/fields/Contact_Phone_txt__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_txt__c</fullName>
    <description>Contact Phone is an home phone number which need to be contact</description>
    <label>Contact Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>