force-app/main/default/objects/Case/fields/Created_By_Crew__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created By Crew</label>
    <referenceTo>Crew__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>