force-app/main/default/objects/Case/fields/Created_by_Profile__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Profile__c</fullName>
    <description>Displays the profile used in creating the case</description>
    <formula>CreatedBy.Profile.Name</formula>
    <label>Created by Profile</label>
    <type>Text</type>
</CustomField>