force-app/main/default/objects/Case/fields/CrewId__c.field-meta.xml
<CustomField>
    <fullName>CrewId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crew</label>
    <referenceTo>Crew__c</referenceTo>
    <relationshipLabel>Cases (Crew)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>