force-app/main/default/objects/Case/fields/CTI__c.field-meta.xml
<CustomField>
    <fullName>CTI__c</fullName>
    <description>Counts all the CTI records on the case</description>
    <label>CTI</label>
    <summaryForeignKey>CTI__c.Caseid__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>