force-app/main/default/objects/Case/fields/Currency_from_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Currency_from_Compensation__c</fullName>
    <description>Displays the currency used from the latest compensation record which will be used for Ground Customer Service's email template</description>
    <label>Currency from Compensation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>