force-app/main/default/objects/Case/fields/Current_Date_TH__c.field-meta.xml
<CustomField>
    <fullName>Current_Date_TH__c</fullName>
    <formula>TEXT(DAY(TODAY())) &amp; " " &amp;CASE(MONTH(TODAY()),1,"มกราคม",2,"กุมภาพันธ์",3,"มีนาคม",4,"เมษายน",5,"พฤษภาคม",6,"มิถุนายน",7,"กรกฎาคม",8,"สิงหาคม",9,"กันยายน",10,"ตุลาคม",11,"พฤศจิกายน",12,"ธันวาคม","-") &amp; " " &amp; TEXT(YEAR(TODAY()) + 543)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Date TH</label>
    <type>Text</type>
</CustomField>