force-app/main/default/objects/Case/fields/Delete_Flag__c.field-meta.xml
<CustomField>
    <fullName>Delete_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Displays whether the case is deleted or not</description>
    <label>Delete Flag</label>
    <type>Checkbox</type>
</CustomField>