force-app/main/default/objects/Case/fields/DEP_FLT_TO__c.field-meta.xml
<CustomField>
    <fullName>DEP_FLT_TO__c</fullName>
    <description>Displays which flight the aircraft that is related to the case is departing as</description>
    <label>DEP FLT TO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>