force-app/main/default/objects/Case/fields/DEP_STN__c.field-meta.xml
<CustomField>
    <fullName>DEP_STN__c</fullName>
    <description>Displays the station the aircraft is located in</description>
    <label>DEP STN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>