force-app/main/default/objects/Case/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Displayed authorized person's department which support for both of BKK and non-BKK. This field is used to be a pert of autorized signatue in email and print feature.</description>
    <formula>IF(	Owner:User.Station__c != 'BKK' &amp;&amp; 
	Owner:User.Station__c != 'CNX' &amp;&amp; 
	Owner:User.Station__c != 'HKT' &amp;&amp; 
	Owner:User.Station__c != 'KBV' &amp;&amp;
	Owner:User.Station__c != 'USM',
        Department_txt__c,
	IF(
		Text(Authorize_Signature__c) != null,
		IF(
			Text(Letter_Language__c) == "TH",
			Department_TH_txt__c ,
			Department_EN_txt__c
		),
	null)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department</label>
    <type>Text</type>
</CustomField>