force-app/main/default/objects/Case/fields/Department_EN__c.field-meta.xml
<CustomField>
    <fullName>Department_EN__c</fullName>
    <description>This field is an autorized person's department in English for Bkk station. Used to be a part of authorized signature.</description>
    <formula>IF(	Owner:User.Station__c != 'BKK' &amp;&amp; 
Owner:User.Station__c != 'CNX' &amp;&amp; 
Owner:User.Station__c != 'HKT' &amp;&amp; 
Owner:User.Station__c != 'KBV' &amp;&amp; 
Owner:User.Station__c != 'USM', 
Department_txt__c, 
IF( Text(Authorize_Signature__c) != null, Department_EN_txt__c, Owner:User.Authorized_Department_EN__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department EN</label>
    <type>Text</type>
</CustomField>