force-app/main/default/objects/Case/fields/Department_EN_txt__c.field-meta.xml
<CustomField>
    <fullName>Department_EN_txt__c</fullName>
    <label>Department EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>