force-app/main/default/objects/Case/fields/Department_TH__c.field-meta.xml
<CustomField>
    <fullName>Department_TH__c</fullName>
    <description>This field is an autorized person's department in Thai for non-BKK station. Used to be a part of authorized signature.</description>
    <formula>IF(	Owner:User.Station__c != 'BKK' &amp;&amp; 
Owner:User.Station__c != 'CNX' &amp;&amp; 
Owner:User.Station__c != 'HKT' &amp;&amp; 
Owner:User.Station__c != 'KBV' &amp;&amp; 
Owner:User.Station__c != 'USM', 
Department_txt__c, 
IF( Text(Authorize_Signature__c) != null, Department_TH_txt__c, Owner:User.Authorized_Department_TH__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department TH</label>
    <type>Text</type>
</CustomField>