force-app/main/default/objects/Case/fields/Department_TH_txt__c.field-meta.xml
<CustomField>
    <fullName>Department_TH_txt__c</fullName>
    <label>Department TH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>