force-app/main/default/objects/Case/fields/Department_txt__c.field-meta.xml
<CustomField>
    <fullName>Department_txt__c</fullName>
    <description>This field is an autorized person's department for non-BKK station. Used to be a part of authorized signature.</description>
    <label>Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>