force-app/main/default/objects/Case/fields/Description_ma_txt__c.field-meta.xml
<CustomField>
    <fullName>Description_ma_txt__c</fullName>
    <label>Remark</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>