force-app/main/default/objects/Case/fields/Description_txt__c.field-meta.xml
<CustomField>
    <fullName>Description_txt__c</fullName>
    <description>Used for display</description>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>