force-app/main/default/objects/Case/fields/DGC_DBC_Email_Body__c.field-meta.xml
<CustomField>
    <fullName>DGC_DBC_Email_Body__c</fullName>
    <description>Displays the list of passengers and compensations (if availlable) that are related to the case</description>
    <label>DGC DBC Email Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>