force-app/main/default/objects/Case/fields/Do_not_Contact__c.field-meta.xml
<CustomField>
    <fullName>Do_not_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not Contact</label>
    <type>Checkbox</type>
</CustomField>