force-app/main/default/objects/Case/fields/Effect_Amount__c.field-meta.xml
<CustomField>
    <fullName>Effect_Amount__c</fullName>
    <description>Displays the total count of case group members (representative of passengers and equipments)</description>
    <label>Effect Amount</label>
    <summaryForeignKey>Case_Group_Member__c.Caseid__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>