force-app/main/default/objects/Case/fields/Email_Body_txt__c.field-meta.xml
<CustomField>
    <fullName>Email_Body_txt__c</fullName>
    <label>Email Body txt</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>