force-app/main/default/objects/Case/fields/Email_To_Case_Key__c.field-meta.xml
<CustomField>
    <fullName>Email_To_Case_Key__c</fullName>
    <externalId>true</externalId>
    <label>Email To Case Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>