force-app/main/default/objects/Case/fields/Emergency_Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emergency Send Email</label>
    <type>Checkbox</type>
</CustomField>