force-app/main/default/objects/Case/fields/Emergency_Type__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Type__c</fullName>
    <label>Emergency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passenger Decease</fullName>
            </value>
            <value>
                <fullName>Crew Decease</fullName>
            </value>
            <value>
                <fullName>Severe Passenger Injury</fullName>
            </value>
            <value>
                <fullName>Severe Crew Injury</fullName>
            </value>
            <value>
                <fullName>Severe Turbulence</fullName>
            </value>
            <value>
                <fullName>Slide Deployment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>