force-app/main/default/objects/Case/fields/EMT_Accepted_Passenger__c.field-meta.xml
<CustomField>
    <fullName>EMT_Accepted_Passenger__c</fullName>
    <description>Displays the accepted passenger of the flight related to the case</description>
    <formula>IF(Previous_Flight__c &lt;> "", Previous_Flight__r.Accepted_Passengers__c, Flightid__r.Accepted_Passengers__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EMT Accepted Passenger</label>
    <type>Text</type>
</CustomField>