force-app/main/default/objects/Case/fields/EMT_Aircraft_Configuration_Case__c.field-meta.xml
<CustomField>
    <fullName>EMT_Aircraft_Configuration_Case__c</fullName>
    <description>Displays the aircraft configuration of the flight related to the case</description>
    <formula>IF(  Previous_Flight__c &lt;> "",   Previous_Flight__r.Aircraft_Configuration__c ,  Flightid__r.Aircraft_Configuration__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EMT_Aircraft Configuration Case</label>
    <type>Text</type>
</CustomField>