force-app/main/default/objects/Case/fields/EMT_Available_Seat__c.field-meta.xml
<CustomField>
    <fullName>EMT_Available_Seat__c</fullName>
    <description>Displays the available seats on a plane categorized by travel class (e.g. F10 C20 Y200)</description>
    <formula>IF(Previous_Flight__c &lt;> "", 
Previous_Flight__r.Available_Seat__c,
Flightid__r.Available_Seat__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Seat</label>
    <type>Text</type>
</CustomField>