force-app/main/default/objects/Case/fields/EMT_Booking_Passenger__c.field-meta.xml
<CustomField>
    <fullName>EMT_Booking_Passenger__c</fullName>
    <description>Displays the booking passenger of the flight related to the case</description>
    <formula>IF( Previous_Flight__c &lt;> "", Previous_Flight__r.Booking_Passengers__c, Flightid__r.Booking_Passengers__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EMT_Booking Passenger</label>
    <type>Text</type>
</CustomField>