force-app/main/default/objects/Case/fields/EMT_Passenger_First_Name__c.field-meta.xml
<CustomField>
    <fullName>EMT_Passenger_First_Name__c</fullName>
    <description>Displays the first name of the passenger related to the case</description>
    <formula>Passengerid__r.First_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EMT Passenger First Name</label>
    <type>Text</type>
</CustomField>