force-app/main/default/objects/Case/fields/EMT_Passenger_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>EMT_Passenger_Last_Name__c</fullName>
    <description>Display sthe last name of the passenger related to the case</description>
    <formula>Passengerid__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EMT Passenger Last Name</label>
    <type>Text</type>
</CustomField>