force-app/main/default/objects/Case/fields/EMT_PNR__c.field-meta.xml
<CustomField>
    <fullName>EMT_PNR__c</fullName>
    <description>Displays the PNR of the passenger related to the case</description>
    <formula>Passengerid__r.PNR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EMT PNR</label>
    <type>Text</type>
</CustomField>