force-app/main/default/objects/Case/fields/EMT_Saleable_Seats__c.field-meta.xml
<CustomField>
    <fullName>EMT_Saleable_Seats__c</fullName>
    <description>Displays the saleable seats of the flight related to the case</description>
    <formula>IF( Previous_Flight__c &lt;> "", Previous_Flight__r.Aircraft_Configuration__c,Flightid__r.Aircraft_Configuration__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EMT Saleable Seats</label>
    <type>Text</type>
</CustomField>