force-app/main/default/objects/Case/fields/EquipmentId__c.field-meta.xml
<CustomField>
    <fullName>EquipmentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Map__c.Field_Name__c</field>
            <operation>contains</operation>
            <value>SERVICE EQUIPMENT, SAFETY EQUIPMENT</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Map__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>