force-app/main/default/objects/Case/fields/Escalate_by__c.field-meta.xml
<CustomField>
    <fullName>Escalate_by__c</fullName>
    <description>Displays the user that escalated the case</description>
    <label>Escalate by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>