force-app/main/default/objects/Case/fields/Escalate_by_Role__c.field-meta.xml
<CustomField>
    <fullName>Escalate_by_Role__c</fullName>
    <description>Displays the role of the user that escalated the case</description>
    <label>Escalate by (Role)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>