force-app/main/default/objects/Case/fields/Escalate_Time__c.field-meta.xml
<CustomField>
    <fullName>Escalate_Time__c</fullName>
    <description>Displays the date and time the case was escalated</description>
    <label>Escalate Time</label>
    <type>DateTime</type>
</CustomField>