force-app/main/default/objects/Case/fields/Escalate_to__c.field-meta.xml
<CustomField>
    <fullName>Escalate_to__c</fullName>
    <description>Displays the destination of the case escalation</description>
    <label>Escalate to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>