force-app/main/default/objects/Case/fields/Escalate_to_Closed__c.field-meta.xml
<CustomField>
    <fullName>Escalate_to_Closed__c</fullName>
    <label>Escalate to Closed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>