force-app/main/default/objects/Case/fields/Escalate_to_Investigated__c.field-meta.xml
<CustomField>
    <fullName>Escalate_to_Investigated__c</fullName>
    <label>Escalate to Investigated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>