force-app/main/default/objects/Case/fields/Escalate_to_Role__c.field-meta.xml
<CustomField>
    <fullName>Escalate_to_Role__c</fullName>
    <description>Displays the role the case was escalated to</description>
    <label>Escalate to (Role)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>