force-app/main/default/objects/Case/fields/Excess_Bag_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Excess_Bag_Ticket_Number__c</fullName>
    <label>Excess Bag Ticket Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>