force-app/main/default/objects/Case/fields/Expected_Flight_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Flight_Date__c</fullName>
    <description>For future flight which not are in Salesforce yet. System will auto create tack and alert 3 days before passenger fly to notice system to update Case's Flight.</description>
    <label>Expected Flight Date</label>
    <type>Date</type>
</CustomField>