force-app/main/default/objects/Case/fields/Expected_Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Expected_Flight_Number__c</fullName>
    <description>For future flight which not are in Salesforce yet</description>
    <label>Expected Flight Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>