force-app/main/default/objects/Case/fields/Expected_PNR__c.field-meta.xml
<CustomField>
    <fullName>Expected_PNR__c</fullName>
    <description>For Passenger PNR of future flight which not are in Salesforce yet</description>
    <label>Expected PNR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>