force-app/main/default/objects/Case/fields/FFP__c.field-meta.xml
<CustomField>
    <fullName>FFP__c</fullName>
    <description>Displays the frequent flyer program of the passenger that is related to the case</description>
    <label>FFP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>