force-app/main/default/objects/Case/fields/FFP_Carrier_F__c.field-meta.xml
<CustomField>
    <fullName>FFP_Carrier_F__c</fullName>
    <description>Displays the frequent flyer program carrier of the passenger that is related to the case</description>
    <formula>Passengerid__r.FFP_Carrier__c</formula>
    <label>FFP Carrier</label>
    <type>Text</type>
</CustomField>