force-app/main/default/objects/Case/fields/FFP_Tier__c.field-meta.xml
<CustomField>
    <fullName>FFP_Tier__c</fullName>
    <description>Displays the frequent flyer program tier of the passenger that is related to the case</description>
    <label>FFP Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>