force-app/main/default/objects/Case/fields/First_Handle_by__c.field-meta.xml
<CustomField>
    <fullName>First_Handle_by__c</fullName>
    <description>Displays the user the case is first handled by</description>
    <label>First Handle by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>