force-app/main/default/objects/Case/fields/First_Handle_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Handle_Time__c</fullName>
    <description>Displays the date and time of the case is first handled</description>
    <label>First Handle Time</label>
    <type>DateTime</type>
</CustomField>