force-app/main/default/objects/Case/fields/First_Handled_to_Closed__c.field-meta.xml
<CustomField>
    <fullName>First_Handled_to_Closed__c</fullName>
    <label>First Handled to Closed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>