force-app/main/default/objects/Case/fields/First_Name_txt__c.field-meta.xml
<CustomField>
    <fullName>First_Name_txt__c</fullName>
    <label>First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>