force-app/main/default/objects/Case/fields/First_Reply_48_hrs__c.field-meta.xml
<CustomField>
    <fullName>First_Reply_48_hrs__c</fullName>
    <formula>IF((First_Reply_Time__c - First_Handle_Time__c)&lt;= 48, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Reply 48 hrs.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>