force-app/main/default/objects/Case/fields/First_Reply_By__c.field-meta.xml
<CustomField>
    <fullName>First_Reply_By__c</fullName>
    <description>staff that first reply to customer in a specific case</description>
    <label>First Reply By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>