force-app/main/default/objects/Case/fields/First_Reply_By_Role__c.field-meta.xml
<CustomField>
    <fullName>First_Reply_By_Role__c</fullName>
    <description>Role of user that reply email to customer of each specific case</description>
    <label>First Reply By Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>