force-app/main/default/objects/Case/fields/First_Reply_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Reply_Time__c</fullName>
    <description>Time stamp of first reply</description>
    <label>First Reply Time</label>
    <type>DateTime</type>
</CustomField>