force-app/main/default/objects/Case/fields/Flight_Date_Manual__c.field-meta.xml
<CustomField>
    <fullName>Flight_Date_Manual__c</fullName>
    <label>Flight Date Manual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>