force-app/main/default/objects/Case/fields/Flight_Date_txt__c.field-meta.xml
<CustomField>
    <fullName>Flight_Date_txt__c</fullName>
    <description>Displays the flight date in text format</description>
    <label>Flight Date txt</label>
    <length>100</length>
    <type>Text</type>
</CustomField>