force-app/main/default/objects/Case/fields/Flight_Name_F__c.field-meta.xml
<CustomField>
    <fullName>Flight_Name_F__c</fullName>
    <description>Displays the flight name as the combination of flight number and flight date</description>
    <formula>Flightid__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Name F</label>
    <type>Text</type>
</CustomField>