force-app/main/default/objects/Case/fields/Flight_Number_for_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number_for_Email_Template__c</fullName>
    <description>Displays the flight number that is related to the case (if previous flight is available, previous flight is shown. If previous flight is not available, then flight number is shown)</description>
    <formula>IF( Previous_Flight__c  &lt;> "",  Previous_Flight__r.Name ,  Flightid__r.Name )</formula>
    <label>Flight Number for Email Template</label>
    <type>Text</type>
</CustomField>