force-app/main/default/objects/Case/fields/Flight_Number_Manual__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number_Manual__c</fullName>
    <label>Flight Number Manual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>