force-app/main/default/objects/Case/fields/Flight_Origin_F__c.field-meta.xml
<CustomField>
    <fullName>Flight_Origin_F__c</fullName>
    <formula>IF(NOT(ISBLANK(Flightid__r.Origin__c)),Flightid__r.Origin__c,"Unidentified")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Origin F</label>
    <type>Text</type>
</CustomField>