force-app/main/default/objects/Case/fields/Flight_Origin_txt__c.field-meta.xml
<CustomField>
    <fullName>Flight_Origin_txt__c</fullName>
    <label>Flight Origin txt</label>
    <length>100</length>
    <type>Text</type>
</CustomField>