force-app/main/default/objects/Case/fields/Flightid__c.field-meta.xml
<CustomField>
    <fullName>Flightid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Displays the flight that is related to the case</description>
    <label>Flight Number</label>
    <referenceTo>Flight__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>