force-app/main/default/objects/Case/fields/Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Follow_up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Follow up flag will be enabled when customer reply while case status is equal to acknowledge</description>
    <label>Follow up</label>
    <type>Checkbox</type>
</CustomField>